@@ -14,6 +14,7 @@ STELLA, CHANGES
 #### 0.8.5 (2010-03-27) ###############################
 
 * FIXED: Add User-Agent header if Stella.agent is not null and one is not already provided
+* FIXED: Client wait (undefined method '>' for Range error)
 * CHANGE: Testrun#samples contains all data samples for each event in a given batch
 * CHANGE: Renamed Testrun#events -> Testrun#event_probes
 * ADDED: Testrun#logsize
@@ -21,6 +22,7 @@ STELLA, CHANGES
 * ADDED: Store error messages in Sample#errors
 * ADDED: Stella.get now takes a block
 * ADDED: Stella.agent
+
 
 #### 0.8.4 (2010-03-19) ###############################
 
